--- a/index.html
+++ b/index.html
@@ -91,9 +91,11 @@
     <div class="custom-cursor__cursor"></div>
     <div class="custom-cursor__cursor-two"></div>
 
-    <div class="preloader">
+    <!-- preloader image here -->
+
+    <!-- <div class="preloader">
       <div class="preloader__image"></div>
-    </div>
+    </div> -->
     <!-- /.preloader -->
 
     <div class="page-wrapper">
