--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     />
     <link rel="stylesheet" href="assets/vendors/animate/animate.min.css" />
     <link rel="stylesheet" href="assets/vendors/animate/custom-animate.css" />
-    <!-- <link rel="stylesheet" href="assets/vendors/fontawesome/css/all.min.css" /> -->
+    <link rel="stylesheet" href="assets/vendors/fontawesome/css/all.min.css" />
     <link rel="stylesheet" href="assets/vendors/jarallax/jarallax.css" />
     <link
       rel="stylesheet"
@@ -240,9 +240,7 @@
             <div class="swiper-slide">
               <div
                 class="image-layer"
-                style="
-                  background-image: url(assets/images/backgrounds/main-slider-1-1.jpg);
-                "
+                style="background-image: url(assets/images/bg-1.jpg)"
               ></div>
               <!-- /.image-layer -->
               <div class="container">
@@ -271,9 +269,7 @@
             <div class="swiper-slide">
               <div
                 class="image-layer"
-                style="
-                  background-image: url(assets/images/backgrounds/main-slider-1-2.jpg);
-                "
+                style="background-image: url(assets/images/bg-3.jpg)"
               ></div>
               <!-- /.image-layer -->
               <div class="container">
@@ -304,9 +300,7 @@
             <div class="swiper-slide">
               <div
                 class="image-layer"
-                style="
-                  background-image: url(assets/images/backgrounds/main-slider-1-3.jpg);
-                "
+                style="background-image: url(assets/images/bg-2.jpg)"
               ></div>
               <!-- /.image-layer -->
               <div class="container">
@@ -337,13 +331,13 @@
               class="swiper-button-prev"
               id="main-slider__swiper-button-next"
             >
-              <i class="icon-left-arrow"></i>
+              <i class="fa-solid fa-angles-left"></i>
             </div>
             <div
               class="swiper-button-next"
               id="main-slider__swiper-button-prev"
             >
-              <i class="icon-right-arrow"></i>
+              <i class="fa-solid fa-angles-right"></i>
             </div>
           </div>
         </div>
@@ -374,7 +368,9 @@
             >
               <div class="experience-one__single">
                 <div class="experience-one__icon">
-                  <span class="icon-service"></span>
+                  <span class="icon-service"
+                    ><i class="fa-solid fa-screwdriver-wrench"></i
+                  ></span>
                 </div>
                 <div class="experience-one__content">
                   <h3 class="experience-one__title">
@@ -392,7 +388,9 @@
             <div class="col-xl-4 col-lg-4 wow fadeInUp" data-wow-delay="200ms">
               <div class="experience-one__single">
                 <div class="experience-one__icon">
-                  <span class="icon-management"></span>
+                  <span class="icon-management"
+                    ><i class="fa-solid fa-people-group"></i
+                  ></span>
                 </div>
                 <div class="experience-one__content">
                   <h3 class="experience-one__title">
@@ -413,7 +411,9 @@
             >
               <div class="experience-one__single">
                 <div class="experience-one__icon">
-                  <span class="icon-headphones"></span>
+                  <span class="icon-headphones"
+                    ><i class="fa-solid fa-headset"></i
+                  ></span>
                 </div>
                 <div class="experience-one__content">
                   <h3 class="experience-one__title">
@@ -478,7 +478,9 @@
                   <li>
                     <div class="about-one__points-single">
                       <div class="about-one__points-icon">
-                        <span class="icon-repair"></span>
+                        <span class="icon-repair"
+                          ><i class="fa-solid fa-toolbox"></i
+                        ></span>
                       </div>
                       <div class="about-one__points-text">
                         <h3 class="about-one__points-title">
@@ -493,7 +495,9 @@
                   <li>
                     <div class="about-one__points-single">
                       <div class="about-one__points-icon">
-                        <span class="icon-phone"></span>
+                        <span class="icon-phone"
+                          ><i class="fa-solid fa-video"></i
+                        ></span>
                       </div>
                       <div class="about-one__points-text">
                         <h3 class="about-one__points-title">
@@ -636,9 +640,6 @@
               <div class="services-one__single">
                 <div class="services-one__img">
                   <img src="assets/images/sound.jpg" alt="" />
-                  <div class="services-one__icon">
-                    <span class="icon-laptop"></span>
-                  </div>
                 </div>
                 <div class="services-one__content">
                   <h3 class="services-one__title">
@@ -665,9 +666,6 @@
               <div class="services-one__single">
                 <div class="services-one__img">
                   <img src="assets/images/revirce cam.jpg" alt="" />
-                  <div class="services-one__icon">
-                    <span class="icon-phone"></span>
-                  </div>
                 </div>
                 <div class="services-one__content">
                   <h3 class="services-one__title">
@@ -695,9 +693,6 @@
               <div class="services-one__single">
                 <div class="services-one__img">
                   <img src="assets/images/4759139_2519194.jpg" alt="" />
-                  <div class="services-one__icon">
-                    <span class="icon-tap"></span>
-                  </div>
                 </div>
                 <div class="services-one__content">
                   <h3 class="services-one__title">
@@ -981,15 +976,10 @@
           <div class="section-title section-title--two text-center">
             <span class="section-title__tagline">Contact Us</span>
             <h2 class="section-title__title">Let Us Know Or Call Us At</h2>
-            <p class="section-title__text">
-              Duis aute irure dolor in repreh enderit in volup tate velit esse
-              cillum dolore <br />
-              eu fugiat nulla dolor atur with Lorem ipsum is simply
-            </p>
           </div>
           <div class="contact-one__form-box">
             <form
-              action="assets/inc/sendemail.php"
+              action="https://formsubmit.co/npcarmusic@gmail.com"
               class="contact-one__form contact-form-validated"
               novalidate="novalidate"
             >
@@ -1002,22 +992,30 @@
                 <div class="col-xl-4 col-lg-4">
                   <div class="contact-form__input-box">
                     <input
-                      type="email"
-                      placeholder="Email Address"
-                      name="email"
+                      type="text"
+                      placeholder="Phone no."
+                      name="phone"
+                      maxlength="12"
                     />
                   </div>
                 </div>
                 <div class="col-xl-4 col-lg-4">
                   <div class="contact-form__input-box">
-                    <input type="text" placeholder="Subject" name="Subject" />
+                    <input
+                      type="text"
+                      placeholder="What do you wanna install/repair ?"
+                      name="device"
+                    />
                   </div>
                 </div>
               </div>
               <div class="row">
                 <div class="col-xl-12 col-lg-12">
                   <div class="contact-form__input-box text-message-box">
-                    <textarea name="message" placeholder="Comment"></textarea>
+                    <textarea
+                      name="message"
+                      placeholder="Detailed info if any"
+                    ></textarea>
                   </div>
                   <div class="contact-form__btn-box">
                     <button type="submit" class="thm-btn contact-form__btn">
@@ -1249,8 +1247,14 @@
     </div>
     <!-- /.search-popup -->
 
-    <a href="#" data-target="html" class="scroll-to-target scroll-to-top"
-      ><i class="icon-right-arrow"></i
+    <a
+      href="https://wa.me/8624876876"
+      target="_blank"
+      class="scroll-to-target scroll-to-top"
+      ><i
+        class="fa-brands fa-whatsapp"
+        style="font-size: 30px; color: #25d366"
+      ></i
     ></a>
 
     <script src="assets/vendors/jquery/jquery-3.6.0.min.js"></script>
